--- a/inventory.ini
+++ b/inventory.ini
@@ -1,1 +1,10 @@
+localhost ansible_connection=local
+[servers:children]
+webservers
+appservers
+
+[webservers]
 192.168.10.93
+
+[appservers]
+192.168.10.95
